--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ qt_add_executable(HEDAR_PROJECT
         modewindow.h modewindow.cpp modewindow.ui
         story.h story.cpp story.ui
         customized.h customized.cpp customized.ui
+        level.h level.cpp level.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET HEDAR_PROJECT APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
