--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ qt_add_executable(HEDAR_PROJECT
         customized.h customized.cpp customized.ui
         level.h level.cpp level.ui
         story_sec.cpp
+        menu.h menu.cpp menu.ui
+        highscore.h highscore.cpp highscore.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET HEDAR_PROJECT APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
